--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     networks:
       - network
     volumes:
-      - ./app:/app
+      - ./app/index.js:/app/index.js
     depends_on:
       - mysql
 
